[gd_scene load_steps=88 format=3 uid="uid://ctso286u1j6so"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_golh8"]
[ext_resource type="AudioStream" uid="uid://3cjvktl7qq2e" path="res://assets/sound/sfx/player/player-attack.wav" id="2_au1jn"]
[ext_resource type="AudioStream" uid="uid://dm8lg0gi5oh4o" path="res://assets/sound/sfx/player/player-damage.wav" id="3_c42qk"]
[ext_resource type="PackedScene" uid="uid://bouo875wigdd8" path="res://src/player/feather/feather.tscn" id="3_pj0em"]
[ext_resource type="AudioStream" uid="uid://b4rpodqelw6tb" path="res://assets/sound/sfx/player/player-feather.wav" id="4_w1gi1"]
[ext_resource type="Texture2D" uid="uid://f2x1d2fc35pt" path="res://assets/sprites/player/jump/jump.png" id="4_ws3vt"]
[ext_resource type="Texture2D" uid="uid://dgg0nufb0rgem" path="res://assets/sprites/player/movement/1.png" id="5_njf6p"]
[ext_resource type="AudioStream" uid="uid://dbuhq2er4p8xv" path="res://assets/sound/sfx/player/player-step.wav" id="5_xp028"]
[ext_resource type="Texture2D" uid="uid://b025uaiy77y88" path="res://assets/sprites/player/movement/2.png" id="6_e13ip"]
[ext_resource type="AudioStream" uid="uid://c6csl275sj4ly" path="res://assets/sound/sfx/player/player-attack-hit.wav" id="6_l6ij5"]
[ext_resource type="Texture2D" uid="uid://chnt5fbscxedb" path="res://assets/sprites/player/movement/3.png" id="7_5sva1"]
[ext_resource type="Texture2D" uid="uid://v5w55bh21his" path="res://assets/sprites/player/dash.png" id="7_631xd"]
[ext_resource type="Texture2D" uid="uid://7doq81mcd8n2" path="res://assets/sprites/player/movement/4.png" id="8_eux0j"]
[ext_resource type="Texture2D" uid="uid://ueth76n56q07" path="res://assets/sprites/player/movement/5.png" id="9_sik4i"]
[ext_resource type="Texture2D" uid="uid://cq00iyikgj5s8" path="res://assets/sprites/player/movement/6.png" id="10_axt5c"]
[ext_resource type="Texture2D" uid="uid://cn08ncpxc48v5" path="res://assets/sprites/player/movement/7.png" id="11_p8i83"]
[ext_resource type="Texture2D" uid="uid://c7mktvnfbbcls" path="res://assets/sprites/player/movement/8.png" id="12_7r3tu"]
[ext_resource type="Texture2D" uid="uid://bg5ojxh7i3obx" path="res://assets/sprites/player/chwytp.png" id="12_307uf"]
[ext_resource type="Texture2D" uid="uid://da8et5s5faim1" path="res://assets/sprites/player/idle.png" id="13_6sixa"]
[ext_resource type="Texture2D" uid="uid://dgkd87j8gxhiw" path="res://assets/sprites/player/movement/9.png" id="13_cupjj"]
[ext_resource type="Texture2D" uid="uid://cpkmovcccexd1" path="res://assets/sprites/player/movement/10.png" id="14_3ieuw"]
[ext_resource type="Texture2D" uid="uid://d0utar6mli8g0" path="res://assets/sprites/player/movement/11.png" id="15_b21ql"]
[ext_resource type="Texture2D" uid="uid://c1xwe0mb2b42j" path="res://assets/sprites/player/movement/12.png" id="16_6tnxa"]
[ext_resource type="Texture2D" uid="uid://c5c6n462opq4c" path="res://assets/sprites/player/movement/13.png" id="17_6jhqv"]
[ext_resource type="Texture2D" uid="uid://cwu5myu8m7unc" path="res://assets/sprites/player/movement/14.png" id="18_1715e"]
[ext_resource type="Texture2D" uid="uid://c2qgi8fhw8j0b" path="res://assets/sprites/player/movement/15.png" id="19_jq18v"]
[ext_resource type="Texture2D" uid="uid://d0yne8387yecq" path="res://assets/sprites/player/movement/16.png" id="20_5xo1d"]
[ext_resource type="Texture2D" uid="uid://nn2uruhsfagu" path="res://assets/sprites/player/slide/slide1.png" id="21_f36vr"]
[ext_resource type="Texture2D" uid="uid://psxhxflpo0ys" path="res://assets/sprites/player/slide/slide2.png" id="23_h1ebp"]
[ext_resource type="Texture2D" uid="uid://de6uyjfeaewdo" path="res://assets/sprites/player/slide/slide3.png" id="24_3uvuj"]
[ext_resource type="Texture2D" uid="uid://d1dlcf5wh808s" path="res://assets/sprites/player/slide/slide4.png" id="25_ac3f8"]
[ext_resource type="Texture2D" uid="uid://cq2lpfd07tr81" path="res://assets/sprites/player/shieldbash.png" id="31_7qrd4"]
[ext_resource type="PackedScene" uid="uid://cuqm1dsbcx8cf" path="res://src/player/spear/spear.tscn" id="31_k2iuf"]
[ext_resource type="Texture2D" uid="uid://bq5g3j5m7fcsu" path="res://assets/sprites/throwables/bronze_shoot.png" id="32_764bl"]
[ext_resource type="Texture2D" uid="uid://dxvr48mmcxytv" path="res://assets/sprites/throwables/stone_shoot.png" id="32_eycl2"]
[ext_resource type="Texture2D" uid="uid://ce4vtfhq8fge1" path="res://assets/sprites/player/atakw.png" id="32_s40f6"]
[ext_resource type="Texture2D" uid="uid://djsh8i7hu05fn" path="res://assets/sprites/throwables/copper_shoot.png" id="33_8mfua"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cojr7"]
radius = 20.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_js45o"]
radius = 20.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ejvj4"]
radius = 15.0
height = 100.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rch5t"]
atlas = ExtResource("7_631xd")
region = Rect2(0, 0, 564, 787)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdhyf"]
atlas = ExtResource("7_631xd")
region = Rect2(564, 0, 564, 787)

[sub_resource type="AtlasTexture" id="AtlasTexture_usgkw"]
atlas = ExtResource("7_631xd")
region = Rect2(1128, 0, 564, 787)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyjho"]
atlas = ExtResource("4_ws3vt")
region = Rect2(1701, 0, 567, 824)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjfix"]
atlas = ExtResource("4_ws3vt")
region = Rect2(2268, 0, 567, 824)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i6po"]
atlas = ExtResource("12_307uf")
region = Rect2(790, 252, 605, 1011)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv0gg"]
atlas = ExtResource("12_307uf")
region = Rect2(1623, 252, 605, 1011)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4er7"]
atlas = ExtResource("12_307uf")
region = Rect2(2456, 252, 605, 1011)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxkqs"]
atlas = ExtResource("12_307uf")
region = Rect2(3289, 252, 605, 1011)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyqu5"]
atlas = ExtResource("4_ws3vt")
region = Rect2(567, 0, 567, 824)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu6ck"]
atlas = ExtResource("12_307uf")
region = Rect2(3942, 252, 560, 1011)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwijm"]
atlas = ExtResource("13_6sixa")
region = Rect2(0, 0, 413, 841)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaro4"]
atlas = ExtResource("13_6sixa")
region = Rect2(826, 0, 413, 841)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jopu"]
atlas = ExtResource("13_6sixa")
region = Rect2(1652, 0, 413, 841)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0a64"]
atlas = ExtResource("13_6sixa")
region = Rect2(2478, 0, 413, 841)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmdkc"]
atlas = ExtResource("4_ws3vt")
region = Rect2(1134, 0, 567, 824)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk7v1"]
atlas = ExtResource("25_ac3f8")
region = Rect2(0, 0, 680, 775)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aeab"]
atlas = ExtResource("6_e13ip")
region = Rect2(0, 0, 518, 789)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha3us"]
atlas = ExtResource("31_7qrd4")
region = Rect2(511, 0, 686, 845)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oxpg"]
atlas = ExtResource("31_7qrd4")
region = Rect2(1317, 0, 686, 845)

[sub_resource type="AtlasTexture" id="AtlasTexture_eldqt"]
atlas = ExtResource("31_7qrd4")
region = Rect2(2123, 0, 686, 845)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik7j8"]
atlas = ExtResource("31_7qrd4")
region = Rect2(2929, 0, 686, 845)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xpl2"]
atlas = ExtResource("31_7qrd4")
region = Rect2(3735, 0, 686, 845)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqs6s"]
atlas = ExtResource("4_ws3vt")
region = Rect2(0, 0, 567, 824)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_q275g"]
load_path = "res://.godot/imported/attack2.png-3513460f6045bc885bf9cb951e08678f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_du7ul"]
load_path = "res://.godot/imported/attack3.png-84cc908999586c4030293d19d4266a93.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xv7f5"]
load_path = "res://.godot/imported/attack4.png-f2ed7f673742534f774eaba0f945cc5c.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_l63ar"]
load_path = "res://.godot/imported/attack6.png-6475f5c1df61f56fc47b60d6677ec4c1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gbvte"]
load_path = "res://.godot/imported/attack5.png-f80503520dfd1838486b6d7ac5a3a480.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_y7dp3"]
atlas = ExtResource("31_7qrd4")
region = Rect2(511, 0, 686, 845)

[sub_resource type="AtlasTexture" id="AtlasTexture_5odqm"]
atlas = ExtResource("32_s40f6")
region = Rect2(827, 28, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnrwy"]
atlas = ExtResource("32_s40f6")
region = Rect2(1654, 28, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8cdx"]
atlas = ExtResource("32_s40f6")
region = Rect2(2481, 28, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylo0f"]
atlas = ExtResource("32_s40f6")
region = Rect2(3308, 28, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgcnd"]
atlas = ExtResource("32_s40f6")
region = Rect2(4135, 28, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg4gw"]
atlas = ExtResource("32_s40f6")
region = Rect2(827, 834, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_76tpl"]
atlas = ExtResource("32_s40f6")
region = Rect2(1654, 834, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfuh3"]
atlas = ExtResource("32_s40f6")
region = Rect2(2481, 834, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_eea1y"]
atlas = ExtResource("32_s40f6")
region = Rect2(3308, 834, 827, 806)

[sub_resource type="AtlasTexture" id="AtlasTexture_00q0p"]
atlas = ExtResource("32_s40f6")
region = Rect2(4135, 834, 827, 806)

[sub_resource type="SpriteFrames" id="SpriteFrames_n5irl"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_rch5t")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_cdhyf")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_usgkw")
}],
"loop": false,
"name": &"air_dash",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyjho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjfix")
}],
"loop": false,
"name": &"end_jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_3uvuj")
}, {
"duration": 1.0,
"texture": ExtResource("23_h1ebp")
}, {
"duration": 1.0,
"texture": ExtResource("21_f36vr")
}],
"loop": false,
"name": &"end_slide",
"speed": 15.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_3i6po")
}],
"loop": true,
"name": &"grab_edge",
"speed": 15.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_3i6po")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bv0gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4er7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxkqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyqu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu6ck")
}],
"loop": false,
"name": &"grab_jump",
"speed": 15.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_dwijm")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_oaro4")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_3jopu")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_i0a64")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_3jopu")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_oaro4")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmdkc")
}],
"loop": true,
"name": &"mid_jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk7v1")
}],
"loop": true,
"name": &"mid_slide",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_njf6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aeab")
}, {
"duration": 1.0,
"texture": ExtResource("7_5sva1")
}, {
"duration": 1.0,
"texture": ExtResource("8_eux0j")
}, {
"duration": 1.0,
"texture": ExtResource("9_sik4i")
}, {
"duration": 1.0,
"texture": ExtResource("10_axt5c")
}, {
"duration": 1.0,
"texture": ExtResource("11_p8i83")
}, {
"duration": 1.0,
"texture": ExtResource("12_7r3tu")
}, {
"duration": 1.0,
"texture": ExtResource("13_cupjj")
}, {
"duration": 1.0,
"texture": ExtResource("14_3ieuw")
}, {
"duration": 1.0,
"texture": ExtResource("15_b21ql")
}, {
"duration": 1.0,
"texture": ExtResource("16_6tnxa")
}, {
"duration": 1.0,
"texture": ExtResource("17_6jhqv")
}, {
"duration": 1.0,
"texture": ExtResource("18_1715e")
}, {
"duration": 1.0,
"texture": ExtResource("19_jq18v")
}, {
"duration": 1.0,
"texture": ExtResource("20_5xo1d")
}],
"loop": true,
"name": &"movement",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha3us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oxpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eldqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik7j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xpl2")
}],
"loop": false,
"name": &"shield_charge",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqs6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyqu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmdkc")
}],
"loop": false,
"name": &"start_jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_f36vr")
}, {
"duration": 1.0,
"texture": ExtResource("23_h1ebp")
}, {
"duration": 1.0,
"texture": ExtResource("24_3uvuj")
}, {
"duration": 1.0,
"texture": ExtResource("25_ac3f8")
}],
"loop": false,
"name": &"start_slide",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_q275g")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_du7ul")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_xv7f5")
}],
"loop": false,
"name": &"throw_feather",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_l63ar")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_gbvte")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_xv7f5")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_du7ul")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_q275g")
}],
"loop": false,
"name": &"throw_spear",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7dp3")
}],
"loop": false,
"name": &"use_shield",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5odqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnrwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8cdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylo0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgcnd")
}],
"loop": false,
"name": &"wing_attack1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg4gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76tpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfuh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eea1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00q0p")
}],
"loop": false,
"name": &"wing_attack2",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_722fy"]
size = Vector2(50, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyrw6"]
size = Vector2(10, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sfbq"]
size = Vector2(10, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or1cx"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42bjv"]
size = Vector2(60, 60)

[sub_resource type="Gradient" id="Gradient_dpvnp"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.2365, 0.33, 0.2178, 1, 0.17916, 0.18, 0.1548, 1, 0.16, 0.1152, 0.0832, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 33
script = ExtResource("1_golh8")

[node name="Timers" type="Node" parent="."]

[node name="SlideTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="WingAttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="DamageTimer" type="Timer" parent="Timers"]

[node name="Kojot" type="Timer" parent="Timers"]

[node name="NormalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cojr7")

[node name="SlideCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 30)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_js45o")
disabled = true

[node name="GrabHand" type="RayCast2D" parent="."]
position = Vector2(0, -50)
target_position = Vector2(30, 0)

[node name="GrabCheck" type="RayCast2D" parent="."]
position = Vector2(0, -43)
target_position = Vector2(30, 0)

[node name="Hurtbox" type="Area2D" parent="." groups=["player_hurtbox"]]
position = Vector2(0, -50)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 50)
shape = SubResource("CapsuleShape2D_ejvj4")

[node name="SFX" type="Node2D" parent="."]

[node name="attack" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("2_au1jn")

[node name="damage" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_c42qk")

[node name="feather" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_w1gi1")

[node name="step" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_xp028")

[node name="attack-hit" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_l6ij5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 1)
scale = Vector2(0.117857, 0.117857)
sprite_frames = SubResource("SpriteFrames_n5irl")
animation = &"wing_attack2"
autoplay = "idle"

[node name="WingAttack" type="Area2D" parent="." groups=["wing_attack"]]
position = Vector2(0, -50)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WingAttack"]
visible = false
position = Vector2(25, 50)
shape = SubResource("RectangleShape2D_722fy")
disabled = true

[node name="ColorRect" type="ColorRect" parent="WingAttack/CollisionShape2D"]
offset_left = -25.0
offset_top = -50.0
offset_right = 25.0
offset_bottom = 50.0
color = Color(1, 0, 0, 0.501961)

[node name="Shield" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2(35, 0)
shape = SubResource("RectangleShape2D_cyrw6")

[node name="ColorRect" type="ColorRect" parent="Shield/CollisionShape2D"]
offset_left = -5.0
offset_top = -35.0
offset_right = 5.0
offset_bottom = 35.0
color = Color(0, 0, 0, 0.470588)

[node name="Area2D" type="Area2D" parent="Shield" groups=["shield_charge"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield/Area2D"]
position = Vector2(40, 0)
shape = SubResource("RectangleShape2D_6sfbq")
disabled = true

[node name="Throwables" type="Node2D" parent="."]

[node name="Spear" parent="Throwables" node_paths=PackedStringArray("player") instance=ExtResource("31_k2iuf")]
visible = false
player = NodePath("../..")

[node name="StoneFeather" parent="Throwables" node_paths=PackedStringArray("player") instance=ExtResource("3_pj0em")]
visible = false
player = NodePath("../..")
flight_time = 0.7

[node name="Hitbox" parent="Throwables/StoneFeather" index="2" groups=["stone_feather"]]

[node name="ColorRect" parent="Throwables/StoneFeather" index="3"]
visible = false
color = Color(0.501961, 0.501961, 0.501961, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Throwables/StoneFeather"]
offset_left = -25.0
offset_top = -26.0
offset_right = 179.0
offset_bottom = 178.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("32_eycl2")

[node name="CopperFeather" parent="Throwables" node_paths=PackedStringArray("player") instance=ExtResource("3_pj0em")]
visible = false
player = NodePath("../..")
flight_time = 0.7
cooldown = 4.0

[node name="Hitbox" parent="Throwables/CopperFeather" index="2" groups=["copper_feather"]]

[node name="ColorRect" parent="Throwables/CopperFeather" index="3"]
visible = false
color = Color(0.721569, 0.45098, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Throwables/CopperFeather"]
offset_left = -25.0
offset_top = -26.0
offset_right = 179.0
offset_bottom = 178.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("33_8mfua")

[node name="BronzeFeather" parent="Throwables" node_paths=PackedStringArray("player") instance=ExtResource("3_pj0em")]
visible = false
player = NodePath("../..")
flight_time = 0.7
cooldown = 5.0

[node name="Hitbox" parent="Throwables/BronzeFeather" index="2" groups=["bronze_feather"]]

[node name="ColorRect" parent="Throwables/BronzeFeather" index="3"]
visible = false
color = Color(0.803922, 0.498039, 0.196078, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Throwables/BronzeFeather"]
offset_left = -25.0
offset_top = -26.0
offset_right = 179.0
offset_bottom = 178.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("32_764bl")

[node name="PushFix" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushFix"]
position = Vector2(0, 50)
shape = SubResource("RectangleShape2D_or1cx")

[node name="SlideFix" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlideFix"]
position = Vector2(8.73393, -21.7357)
shape = SubResource("RectangleShape2D_42bjv")
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 43)
emitting = false
amount = 15
lifetime = 1.5
speed_scale = 0.5
randomness = 0.45
emission_shape = 3
emission_rect_extents = Vector2(10, 1)
direction = Vector2(0, -1)
initial_velocity_min = 54.01
initial_velocity_max = 63.55
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_dpvnp")

[connection signal="timeout" from="Timers/SlideTimer" to="." method="_on_slide_timer_timeout"]
[connection signal="timeout" from="Timers/WingAttackTimer" to="." method="_on_wing_attack_timer_timeout"]
[connection signal="timeout" from="Timers/DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Timers/Kojot" to="." method="_on_kojot_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PushFix" to="." method="_on_push_fix_body_entered"]
[connection signal="body_exited" from="PushFix" to="." method="_on_push_fix_body_exited"]
[connection signal="body_entered" from="SlideFix" to="." method="_on_slide_fix_body_entered"]
[connection signal="body_exited" from="SlideFix" to="." method="_on_slide_fix_body_exited"]

[editable path="Throwables/StoneFeather"]
[editable path="Throwables/CopperFeather"]
[editable path="Throwables/BronzeFeather"]
